k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: cloud-scaling-demo
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 6543
      targetPort: http
